--- a/basal_area_by_size_class.Rmd
+++ b/basal_area_by_size_class.Rmd
@@ -77,17 +77,15 @@ unharvested <- data_plots %>%
                 filter(harvested == "no") %>%
                 select(ba_saplings, starts_with("ba_trees"))
 
-set.seed(1)
+set.seed(2)
 boot_intervals <- bind_rows(compute_bootstrap_interval(unharvested$ba_saplings),
                             compute_bootstrap_interval(unharvested$ba_trees05to09),
                             compute_bootstrap_interval(unharvested$ba_trees10to14),
-                            compute_bootstrap_interval(unharvested$ba_trees15to19),
-                            compute_bootstrap_interval(unharvested$ba_trees20plus),
+                            compute_bootstrap_interval(unharvested$ba_trees15plus),
                             compute_bootstrap_interval(harvested$ba_saplings),
                             compute_bootstrap_interval(harvested$ba_trees05to09),
                             compute_bootstrap_interval(harvested$ba_trees10to14),
-                            compute_bootstrap_interval(harvested$ba_trees15to19),
-                            compute_bootstrap_interval(harvested$ba_trees20plus))
+                            compute_bootstrap_interval(harvested$ba_trees15plus))
 
 ba_mean_data <- data_plots %>%
                   select(harvested, ba_saplings, starts_with("ba_trees")) %>%
@@ -104,8 +102,7 @@ ba_mean_data <- data_plots %>%
                                                  "Saplings (0-4 cm DBH)" = "saplings",
                                                  "Trees (5-9 cm DBH)" = "trees05to09",
                                                  "Trees (10-14 cm DBH)" = "trees10to14",
-                                                 "Trees (15-19 cm DBH)" = "trees15to19",
-                                                 "Trees (20+ cm DBH)" = "trees20plus"))
+                                                 "Trees (15+ cm DBH)" = "trees15plus"))
 ```
 
 ### Pointrange plot
@@ -117,6 +114,7 @@ ba_sizeclass_fig1 <- ba_mean_data %>%
                       ymin = lower, y = mean, ymax = upper),
                   position = position_dodge(width = 0.5), size = 0.5, linewidth = 1) +
   plot_theme +
+  theme(legend.position = c(0.1, 0.8)) +
   scale_color_brewer(palette = "Dark2") +
   labs(x = "Size class", y = "Average basal area (m2 per hectare)") +
   guides(col=guide_legend(title = "Status"))
@@ -135,6 +133,7 @@ ba_sizeclass_fig2 <- ba_mean_data %>%
   geom_errorbar(aes(x = size_class, ymin = lower, ymax = upper), col = "gray20",
                 position = position_dodge(width = 0.9), width = 0.2, show.legend = FALSE) +
   plot_theme +
+  theme(legend.position = c(0.1, 0.8)) +
   scale_fill_brewer(palette = "Dark2") +
   labs(x = "Size class", y = "Average basal area (m2 per hectare)") +
   guides(fill=guide_legend(title = "Status"))
@@ -161,8 +160,7 @@ ba_dist_data <- data_plots %>%
                                                  "Saplings (0-4 cm DBH)" = "saplings",
                                                  "Trees (5-9 cm DBH)" = "trees05to09",
                                                  "Trees (10-14 cm DBH)" = "trees10to14",
-                                                 "Trees (15-19 cm DBH)" = "trees15to19",
-                                                 "Trees (20+ cm DBH)" = "trees20plus"))
+                                                 "Trees (15+ cm DBH)" = "trees15plus"))
 ```
 
 ### Violin plot
@@ -175,6 +173,7 @@ ba_dist_data %>%
               scale = "area", width = 2, position = position_dodge(width = 0.7),
               lwd = 0.75, kernel = "gaussian", adjust = 1.25) +
   plot_theme +
+  theme(legend.position = c(0.1, 0.8)) +
   scale_fill_brewer(palette = "Dark2") +
   labs(x = "Size class", y = "Basal area (m2 per hectare)") +
   guides(fill = guide_legend(title = "Status"))
@@ -190,6 +189,7 @@ ba_sizeclass_fig3 <- ba_dist_data %>%
                outlier.shape = 21, outlier.color = "gray20",
                outlier.fill = "gray80") +
   plot_theme +
+  theme(legend.position = c(0.1, 0.8)) +
   scale_fill_brewer(palette = "Dark2") +
   labs(x = "Size class", y = "Basal area (m2 per hectare)") +
   guides(fill = guide_legend(title = "Status"))
@@ -212,10 +212,7 @@ data_plots %>%
   ggplot() + geom_histogram(aes(x = ba_trees10to14), bins = 20,
                             col = "black", fill = "gray80") + plot_theme
 data_plots %>%
-  ggplot() + geom_histogram(aes(x = ba_trees15to19), bins = 10,
-                            col = "black", fill = "gray80") + plot_theme
-data_plots %>%
-  ggplot() + geom_histogram(aes(x = ba_trees20plus), bins = 5,
+  ggplot() + geom_histogram(aes(x = ba_trees15plus), bins = 10,
                             col = "black", fill = "gray80") + plot_theme
 ```
 
@@ -234,13 +231,9 @@ summary(data_plots$ba_trees10to14)
 data_plots %>% filter(harvested == "yes") %>% pull(ba_trees10to14) %>% summary()
 data_plots %>% filter(harvested == "no") %>% pull(ba_trees10to14) %>% summary()
 
-summary(data_plots$ba_trees15to19)
-data_plots %>% filter(harvested == "yes") %>% pull(ba_trees15to19) %>% summary()
-data_plots %>% filter(harvested == "no") %>% pull(ba_trees15to19) %>% summary()
-
-summary(data_plots$ba_trees20plus)
-data_plots %>% filter(harvested == "yes") %>% pull(ba_trees20plus) %>% summary()
-data_plots %>% filter(harvested == "no") %>% pull(ba_trees20plus) %>% summary()
+summary(data_plots$ba_trees15plus)
+data_plots %>% filter(harvested == "yes") %>% pull(ba_trees15plus) %>% summary()
+data_plots %>% filter(harvested == "no") %>% pull(ba_trees15plus) %>% summary()
 ```
 
 ### Box plots, harvesting status
@@ -256,10 +249,7 @@ data_plots %>% ggplot() +
   geom_boxplot(aes(x = harvested, y = ba_trees10to14),
                col = "black", fill = "gray80") + plot_theme
 data_plots %>% ggplot() +
-  geom_boxplot(aes(x = harvested, y = ba_trees15to19),
-               col = "black", fill = "gray80") + plot_theme
-data_plots %>% ggplot() +
-  geom_boxplot(aes(x = harvested, y = ba_trees20plus),
+  geom_boxplot(aes(x = harvested, y = ba_trees15plus),
                col = "black", fill = "gray80") + plot_theme
 ```
 
@@ -276,10 +266,7 @@ data_plots %>% ggplot() +
   geom_boxplot(aes(x = vegetation_type, y = ba_trees10to14),
                col = "black", fill = "gray80") + plot_theme
 data_plots %>% ggplot() +
-  geom_boxplot(aes(x = vegetation_type, y = ba_trees15to19),
-               col = "black", fill = "gray80") + plot_theme
-data_plots %>% ggplot() +
-  geom_boxplot(aes(x = vegetation_type, y = ba_trees20plus),
+  geom_boxplot(aes(x = vegetation_type, y = ba_trees15plus),
                col = "black", fill = "gray80") + plot_theme
 ```
 
@@ -296,32 +283,8 @@ data_plots %>% ggplot() +
   geom_boxplot(aes(x = milpa, y = ba_trees10to14),
                col = "black", fill = "gray80") + plot_theme
 data_plots %>% ggplot() +
-  geom_boxplot(aes(x = milpa, y = ba_trees15to19),
+  geom_boxplot(aes(x = milpa, y = ba_trees15plus),
                col = "black", fill = "gray80") + plot_theme
-data_plots %>% ggplot() +
-  geom_boxplot(aes(x = milpa, y = ba_trees20plus),
-               col = "black", fill = "gray80") + plot_theme
-```
-
-### Interaction plots
-
-```{r}
-par(mfrow = c(1,3))
-with(data_plots, {interaction.plot(vegetation_type, milpa, ba_saplings)
-                  interaction.plot(milpa, harvested, ba_saplings)
-                  interaction.plot(vegetation_type, harvested, ba_saplings)})
-with(data_plots, {interaction.plot(vegetation_type, milpa, ba_trees05to09)
-                  interaction.plot(milpa, harvested, ba_trees05to09)
-                  interaction.plot(vegetation_type, harvested, ba_trees05to09)})
-with(data_plots, {interaction.plot(vegetation_type, milpa, ba_trees10to14)
-                  interaction.plot(milpa, harvested, ba_trees10to14)
-                  interaction.plot(vegetation_type, harvested, ba_trees10to14)})
-with(data_plots, {interaction.plot(vegetation_type, milpa, ba_trees15to19)
-                  interaction.plot(milpa, harvested, ba_trees15to19)
-                  interaction.plot(vegetation_type, harvested, ba_trees15to19)})
-with(data_plots, {interaction.plot(vegetation_type, milpa, ba_trees20plus)
-                  interaction.plot(milpa, harvested, ba_trees20plus)
-                  interaction.plot(vegetation_type, harvested, ba_trees20plus)})
 ```
 
 
@@ -334,244 +297,107 @@ Seedlings have zero basal area by definition, so there is no need to fit a model
 
 ## Saplings (0-4 cm DBH)
 
-### Fit model and check assumptions
+## Fit gamma model and check residual plots
 
 ```{r}
-mod.saplings <- lm(ba_saplings ~ harvested + vegetation_type + milpa +
-                        harvested:vegetation_type + harvested:vegetation_type, data = data_plots)
+mod_saplings <- glm(ba_saplings ~ harvested + vegetation_type + milpa + latitude + longitude,
+                    family = Gamma(link="log"), data = data_plots)
+```
 
+```{r}
 par(mfrow = c(1,2))
-plot(mod.saplings, which = 1:2)
+plot(mod_saplings, which = 1:2)
 ```
 
-### Attempt transformation of response
+## Summarize the model
 
 ```{r}
-# Very distinct megaphone shape on the residuals vs. fitted; try Box-Cox
-MASS::boxcox(mod.saplings)
-
-# Box-Cox strongly suggests log transformation; re-fit model with logged response
-mod.saplings.transform <- lm(log(ba_saplings) ~ harvested + vegetation_type + milpa +
-                                  harvested:vegetation_type + harvested:vegetation_type, data = data_plots)
-
-# Check constant variance assumption again
-par(mfrow = c(1,2))
-plot(mod.saplings.transform, which = 1:2)
+summary(mod_saplings)
 ```
 
-Assumptions look significantly better, so we will proceed with the transformed model.
-
-### Summarize selected model and run ANOVA
+## Construct analysis of deviance table
 
 ```{r}
-# Check for outliers
-outlierTest(mod.saplings.transform)
-
-# No significant outliers; look at model summary
-summary(mod.saplings.transform)
-
-# Construct ANOVA table (use type 2 SS since data are unbalanced)
-Anova(mod.saplings.transform, type = 2)
-```
-
-
-We find that vegetation_type is significant, but harvested, milpa, and the interaction terms are not.
-
-### Pairwise comparisons
-
-```{r}
-# Pairwise comparison for vegetation_type using Tukey HSD
-# Nuku'uch che' has a significantly lower sapling BA than Ju'uche' and Keelenche'
-TukeyHSD(aov(mod.saplings.transform), "vegetation_type", conv.level = 0.95)
-
-# Confirm lack of significance of harvested using Tukey HSD
-TukeyHSD(aov(mod.saplings.transform), "harvested", conv.level = 0.95)
+Anova(mod_saplings, type = 2, test.statistic = "LR")
 ```
 
 ## Trees (5-9 cm DBH)
 
-### Fit model and check assumptions
+## Fit gamma model and check residual plots
 
 ```{r}
-mod.05to09 <- lm(ba_trees05to09 ~ harvested + vegetation_type + milpa +
-                    harvested:vegetation_type + harvested:milpa, data = data_plots)
+mod_trees05to09 <- glm(ba_trees05to09 ~ harvested + vegetation_type + milpa + latitude + longitude,
+                       family = Gamma(link="log"), data = data_plots)
+```
 
+```{r}
 par(mfrow = c(1,2))
-plot(mod.05to09, which = 1:2)
+plot(mod_trees05to09, which = 1:2)
 ```
 
-### Attempt transformation of response
+## Summarize the model
 
 ```{r}
-# Very distinct megaphone shape on the residuals vs. fitted; try Box-Cox
-MASS::boxcox(mod.05to09)
-
-# Box-Cox strongly suggests log transformation; re-fit model with logged response
-mod.05to09.transform <- lm(log(ba_trees05to09) ~ harvested + vegetation_type + milpa +
-                                harvested:vegetation_type + harvested:milpa, data = data_plots)
-
-# Check constant variance assumption again
-par(mfrow = c(1,2))
-plot(mod.05to09.transform, which = 1:2)
+summary(mod_trees05to09)
 ```
 
-Assumptions look significantly better, so we will proceed with the transformed model.
-
-### Summarize selected model and run ANOVA
-```{r}
-# Check for outliers
-outlierTest(mod.05to09.transform)
-
-# No significant outliers; look at model summary
-summary(mod.05to09.transform)
-
-# Construct ANOVA table (use type 2 SS since data are unbalanced)
-Anova(mod.05to09.transform, type = 2)
-```
-
-We find that vegetation_type is significant, but harvested, milpa, and the interaction terms are not.
-
-### Pairwise comparisons
+## Construct analysis of deviance table
 
 ```{r}
-# Pairwise comparison for vegetation_type using Tukey HSD
-# Keelenche' has a significantly higher 5-9 cm tree BA than Nuku'uch che'
-TukeyHSD(aov(mod.05to09.transform), "vegetation_type", conf.level = 0.95)
-
-# Confirm lack of significance of harvested using Tukey HSD
-TukeyHSD(aov(mod.05to09.transform), "harvested", conf.level = 0.95)
+Anova(mod_trees05to09, type = 2, test.statistic = "LR")
 ```
 
 ## Trees (10-14 cm DBH)
 
-### Fit model and check assumptions
+## Fit gamma model and check residual plots
 
 ```{r}
-mod.10to14 <- lm(ba_trees10to14 ~ harvested + vegetation_type + milpa +
-                      harvested:vegetation_type + harvested:milpa, data = data_plots)
+mod_trees10to14 <- glm(ba_trees10to14 ~ harvested + vegetation_type + milpa + latitude + longitude,
+                       family = Gamma(link="log"), data = data_plots)
+```
 
+```{r}
 par(mfrow = c(1,2))
-plot(mod.10to14, which = 1:2)
+plot(mod_trees10to14, which = 1:2)
 ```
 
-Assumptions appear to be satisfied.
-
-### Summarize selected model and run ANOVA
+## Summarize the model
 
 ```{r}
-# Check for outliers
-outlierTest(mod.10to14)
-
-# No significant outliers; look at model summary
-summary(mod.10to14)
-
-# Construct ANOVA table (use type 2 SS since data are unbalanced)
-Anova(mod.10to14, type = 2)
+summary(mod_trees10to14)
 ```
 
-We find that vegetation type is significant, but harvested, milpa, and the interaction terms are not.
-
-### Pairwise comparisons
+## Construct analysis of deviance table
 
 ```{r}
-# Pairwise comparison for vegetation_type using Tukey HSD
-# Keelenche' has a significantly higher 10-14 cm tree BA than Nuku'uch che'
-TukeyHSD(aov(mod.10to14), "vegetation_type", conf.level = 0.95)
-
-# Confirm lack of significance of harvested using Tukey HSD
-TukeyHSD(aov(mod.10to14), "harvested", conf.level = 0.95)
+Anova(mod_trees10to14, type = 2, test.statistic = "LR")
 ```
 
-## Trees (15-19 cm DBH)
+## Trees (15+ cm DBH)
 
-### Fit model and check assumptions
+## Fit gamma model and check residual plots
+
+There are four plots with zero 15+ cm trees. We decide to drop these four plots; otherwise, we cannot use the gamma GLM.
 
 ```{r}
-mod.15to19 <- lm(ba_trees15to19 ~ harvested + vegetation_type + milpa +
-                      harvested:vegetation_type + harvested:milpa, data = data_plots)
+mod_trees15plus <- glm(ba_trees15plus ~ harvested + vegetation_type + milpa + latitude + longitude,
+                       family = Gamma(link="log"), data = data_plots %>% filter(stemden_trees15plus_count > 0))
+```
 
+```{r}
 par(mfrow = c(1,2))
-plot(mod.15to19, which = 1:2)
+plot(mod_trees15plus, which = 1:2)
 ```
 
-Assumptions appear to be satisfied.
-
-### Summarize selected model and run ANOVA
+## Summarize the model
 
 ```{r}
-# Check for outliers
-outlierTest(mod.15to19)
-
-# No significant outliers; look at model summary
-summary(mod.15to19)
-
-# Construct ANOVA table (use type 2 SS since data are unbalanced)
-Anova(mod.15to19, type = 2)
+summary(mod_trees15plus)
 ```
 
-We find that no predictors are significant.
-
-### Pairwise comparisons
+## Construct analysis of deviance table
 
 ```{r}
-# Confirm lack of significance of harvested using Tukey HSD
-TukeyHSD(aov(mod.15to19), "harvested", conf.level = 0.95)
+Anova(mod_trees15plus, type = 2, test.statistic = "LR")
 ```
 
-## Trees (20+ cm DBH)
-
-### Fit model and check assumptions
-
-```{r}
-mod.20plus <- lm(ba_trees20plus ~ harvested + vegetation_type + milpa +
-                      harvested:vegetation_type + harvested:milpa, data = data_plots)
-
-par(mfrow = c(1,2))
-plot(mod.20plus, which = 1:2)
-```
-
-There is a slight megaphone shape on the residuals vs. fitted. We can't do a log transformation since the response has zeros, so we'll try a square root transformation.
-
-### Attempt transformation of response
-
-```{r}
-mod.20plus.transform <- lm(sqrt(ba_trees20plus) ~ harvested + vegetation_type + milpa +
-                                harvested:vegetation_type + harvested:milpa, data = data_plots)
-
-# Check constant variance assumption again
-par(mfrow = c(1,2))
-plot(mod.20plus.transform, which = 1:2)
-```
-
-No substantial improvement in assumptions, so we will proceed with the untransformed model.
-
-### Summarize selected model and run ANOVA
-
-```{r}
-# Check for outliers
-outlierTest(mod.20plus)
-
-# No significant outliers; look at model summary
-summary(mod.20plus)
-
-# Construct ANOVA table (use type 2 SS since data are unbalanced)
-Anova(mod.20plus, type = 2)
-```
-
-We find that vegetation type and milpa are significant, but harvested and the interaction terms are not.
-
-### Pairwise comparisons
-
-```{r}
-# Pairwise comparison for vegetation_type using Tukey HSD
-# Nuku'uch che' has significantly higher 20+ cm tree BA than ju'uche' and keelenche';
-# no significant difference between the latter two
-TukeyHSD(aov(mod.20plus), "vegetation_type", conf.level = 0.95)
-
-# Pairwise comparison for milpa using Tukey HSD
-# Plots that have been milpa have significantly higher 20+ cm tree BA
-TukeyHSD(aov(mod.20plus), "milpa", conf.level = 0.95)
-
-# Confirm lack of significance of harvested using Tukey HSD
-TukeyHSD(aov(mod.20plus), "harvested", conf.level = 0.95)
-```
