--- a/basal_area.Rmd
+++ b/basal_area.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "\\textbf{Basal area}"
 author: "\\textbf{Tim White}"
-date: "\\textbf{June 2024}"
+date: ""
 output: pdf_document
 knit: (function(inputFile, encoding) {
   rmarkdown::render(inputFile, encoding = encoding, output_dir = "pdfs") })
