--- a/proportion_cut.Rmd
+++ b/proportion_cut.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "\\textbf{Proportion of cut trees in harvested plots}"
 author: "\\textbf{Tim White}"
-date: "\\textbf{June 2024}"
+date: ""
 output: pdf_document
 knit: (function(inputFile, encoding) {
   rmarkdown::render(inputFile, encoding = encoding, output_dir = "pdfs") })
