--- a/stem_density_by_size_class.Rmd
+++ b/stem_density_by_size_class.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "\\textbf{Stem density by size class}"
 author: "\\textbf{Tim White}"
-date: "\\textbf{June 2024}"
+date: ""
 output: pdf_document
 knit: (function(inputFile, encoding) {
   rmarkdown::render(inputFile, encoding = encoding, output_dir = "pdfs") })
